syntax = "proto3"; //su dung proto3

package week4;

option go_package="week4";

message SumRequest {
    int32 num1 = 1;
    int32 num2 = 2;
}

message SumResponse {
    int32 result = 1;
}

service CalculatorService {
    rpc Sum (SumRequest) returns (SumResponse);
}
